# LaPrisionMuseo

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  linux.yml  macos.yml  windows.yml
binaries/: cursors.json  i18n.json  rooms.json  scenes.json
binaries/rooms/: rooms.json
binaries/splash/: splash.frag
binaries/ui/: i18n.json
doc/: InstallSFML.md  Resources.md  Submodules.md  architecture.puml
src/: Configuration.h  Configuration.hpp  Engine.h  Engine.hpp  Program.cpp  Resources.cpp  Resources.hpp  main.cpp
src/assets/: AssetManager.hpp  AssetManagerSFML.cpp  AssetManagerSFML.hpp
src/components/: Animator.cpp  Animator.h  Animator.hpp  AspectRatio.cpp  AspectRatio.h  AspectRatio.hpp  Internationalization.cpp  Internationalization.h  Internationalization.hpp
src/login/: LoginScene.cpp  LoginScene.h  LoginScene.hpp  LoginSceneNode.cpp  LoginSceneNode.h
src/network/: DebugNetwork.cpp  DebugNetwork.h  DebugNetwork.hpp  INetwork.h  INetwork.hpp  NullNetwork.cpp  NullNetwork.h  NullNetwork.hpp  SocketIONetwork.cpp  SocketIONetwork.hpp
src/player/: Player.cpp  Player.hpp
src/room/: Room.cpp  Room.h  RoomCamera.cpp  RoomCamera.h  RoomCamera.hpp  RoomDirection.hpp  RoomScene.cpp  RoomScene.h  RoomSceneNode.cpp  RoomSceneNode.h  RoomSceneNode.hpp
src/scene/: Scene.cpp  Scene.h  Scene.hpp  SceneFactory.h  SceneFactory.hpp  SceneManager.cpp  SceneManager.h  SceneManager.hpp  SceneNode.cpp  SceneNode.h  SceneNode.hpp
src/scene/nodes/: BackgroundNode.cpp  BackgroundNode.h  BackgroundNode.hpp  ClickableText.cpp  ClickableText.h  ClickableText.hpp  Text.cpp  Text.hpp
src/scenes/login/: LoginScene.cpp  LoginScene.hpp
src/scenes/splash/: SplashNode.cpp  SplashNode.hpp  SplashScene.cpp  SplashScene.hpp
src/scenes/world/: WorldScene.cpp  WorldScene.hpp
src/scenes/world/room/: RoomCamera.cpp  RoomSceneNode.cpp
src/splash/: SplashNode.cpp  SplashNode.hpp  SplashScene.cpp  SplashScene.hpp
src/system/: BinaryFormatter.hpp  Configuration.hpp  Internationalization.cpp  Internationalization.hpp  Package.hpp  Resources.cpp  Resources.hpp  ResourcesManager.cpp  ResourcesManager.hpp
src/widgets/: Cursor.cpp  Cursor.h  Cursor.hpp  QuadAspectRatio.cpp  QuadAspectRatio.h
src/world/: WorldScene.cpp  WorldScene.h  WorldScene.hpp
